# simplify-poly

./: CMakeLists.txt  Makefile  README.md
experimental_evaluations/: input_dense_rectangle_40.csv  input_nested_island.csv  input_outer_with_8_holes.csv  input_u_shape_narrow.csv  output_dense_rectangle_40.txt  output_nested_island.txt  output_outer_with_8_holes.txt  output_u_shape_narrow.txt
include/: geometry.hpp  io_csv.hpp  simplify.hpp  validation.hpp
src/: geometry.cpp  io_csv.cpp  main.cpp  simplify.cpp  validation.cpp
